--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "@ptomasroos/react-native-multi-slider": "0.0.12",
     "expo": "^26.0.0",
     "lodash": "^4.17.5",
+    "moment": "^2.22.1",
+    "moment-timezone": "^0.5.16",
     "react": "16.3.0-alpha.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
     "react-native-progress": "^3.4.0",
+    "react-native-router-flux": "^4.0.0-beta.28",
     "react-navigation": "^1.5.11"
   }
 }
