--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "moment-timezone": "^0.5.16",
     "react": "16.3.0-alpha.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
+    "react-native-calendars": "^1.19.3",
     "react-native-progress": "^3.4.0",
+    "react-native-rating": "^2.0.4",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-navigation": "^1.5.11"
   }
